<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="public_app_name">智慧机关</string>
    <string name="public_module_name">app</string>
    <string name="public_loading">加载中</string>

    <!--   通用的 提示  -->
    <string name="public_common_title">温馨提示</string>
    <string name="public_common_cancel">取消</string>
    <string name="public_common_confirm">确定</string>
    <string name="public_common_close">关闭</string>
    <string name="public_setting_title">设置</string>
    <string name="public_common_commit">提交</string>
    <string name="public_common_complete">完成</string>

    <string name="public_common_permission_hint">请先授予权限</string>
    <string name="public_common_permission_fail">授权失败，请手动授予权限</string>

    <string name="public_common_step_next">下一步</string>
    <string name="public_common_step_complete">完成</string>
    <string name="public_common_step_commit">提交</string>

    <string name="public_common_camera">拍摄</string>
    <string name="public_common_album">从相册选择</string>

    <string name="public_common_loading">加载中&#8230;</string>

    <string name="public_setting_language">语言切换</string>
    <string name="public_setting_language_simple">简体中文</string>
    <string name="public_setting_language_complex">繁体中文</string>
    <string name="public_languate_sel_zh" translatable="false">中文</string>
    <string name="public_languate_sel_en" translatable="false">English</string>


    <string name="public_common_code_send">获取验证码</string>


    <!-- 升级对话框 -->
    <string name="public_update_app">升级</string>

    <string name="public_update_download_fail">启动下载失败</string>
    <string name="public_update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="public_update_permission_high_hint">未取得安装权限,请进入设置允许安装未知应用。</string>

    <string name="public_update_status_running">下载中</string>
    <string name="public_update_status_successful">立即安装</string>
    <string name="public_update_status_failed">下载失败</string>
    <string name="public_update_status_paused">暂停中</string>
    <string name="public_update_status_pending">等待下载</string>
    <string name="public_update_no_update">当前已是最新版本</string>

    <string name="public_share_platform_copy_hint">已复制到剪贴板</string>


    <!-- 提示 -->
    <string name="public_hint_loading_text">加载中&#8230;</string>
    <string name="public_hint_no_network">请检查网络后点击重新加载</string>
    <string name="public_hint_data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="public_hint_empty_view_hint">暂无数据~~</string>

    <!-- 主页 -->
    <string name="public_home_exit_hint">再按一次退出</string>
    <string name="public_name_login">登录</string>
    <string name="public_name_home">首页</string>
    <string name="public_name_ai">通讯录</string>
    <string name="public_name_stats">工作台</string>
    <string name="public_name_user">我的</string>

    <string name="public_social_contract">收起</string>
    <string name="public_social_expend">展开</string>
    <string name="public_social_text_target">网页链接</string>


    <!-- 默认 -->
    <string-array name="public_dl_side_bar_def_list">
        <item>\u2191</item>
        <item>\u2606</item>
        <item>\u0041</item>
        <item>\u0042</item>
        <item>\u0043</item>
        <item>\u0044</item>
        <item>\u0045</item>
        <item>\u0046</item>
        <item>\u0047</item>
        <item>\u0048</item>
        <item>\u0049</item>
        <item>\u004a</item>
        <item>\u004b</item>
        <item>\u004c</item>
        <item>\u004d</item>
        <item>\u004e</item>
        <item>\u004f</item>
        <item>\u0050</item>
        <item>\u0051</item>
        <item>\u0052</item>
        <item>\u0053</item>
        <item>\u0054</item>
        <item>\u0055</item>
        <item>\u0056</item>
        <item>\u0057</item>
        <item>\u0058</item>
        <item>\u0059</item>
        <item>\u005a</item>
        <item>\u0023</item>
    </string-array>


    <!-- 缺省页提示信息 -->
    <string name="public_msg_content_no_treatment">暂无数据</string>




    <string name="cv_app_name">CalendarView</string>
    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0315消权日</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1031万圣节</item>
        <item>1111光棍节</item>
        <item>1224平安夜</item>
        <item>1225圣诞节</item>
    </string-array>

    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>

    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string-array name="week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="year_view_week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="month_string_array">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <integer-array name="trunk_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </integer-array>

    <string-array name="trunk_string_array">
        <item>辛</item>
        <item>壬</item>
        <item>癸</item>
        <item>甲</item>
        <item>乙</item>
        <item>丙</item>
        <item>丁</item>
        <item>戊</item>
        <item>己</item>
        <item>庚</item>
    </string-array>

    <integer-array name="branch_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string-array name="branch_string_array">
        <item>酉</item>
        <item>戌</item>
        <item>亥</item>
        <item>子</item>
        <item>丑</item>
        <item>寅</item>
        <item>卯</item>
        <item>辰</item>
        <item>巳</item>
        <item>午</item>
        <item>未</item>
        <item>申</item>

    </string-array>
</resources>
