<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_home"
        android:checked="true"
        android:icon="@drawable/public_navigation_selector_home"
        android:title="@string/public_name_home" />
    <item
        android:id="@+id/i_ai"
        android:checked="true"
        android:icon="@drawable/public_navigation_selector_ai"
        android:title="@string/public_name_ai" />
    <item
        android:id="@+id/i_stats"
        android:checked="true"
        android:icon="@drawable/public_navigation_selector_stats"
        android:title="@string/public_name_stats" />
    <item
        android:id="@+id/i_user"
        android:icon="@drawable/public_navigation_selector_user"
        android:title="@string/public_name_user" />

</menu>